@@ -87,6 +87,13 @@ current database's default Autotype string (if set via Manage->Options).</td>
 override this for any particular entry. Note: the inbuilt special symbols
 for EasyVision and Pronounceable passwords can not be overriden in either case.</td>
 </tr>
+<tr>
+<td align="center" width="100">n/a</td>
+<td>Allow user to control the copying password to clipboard when performing
+"Browse to URL" via an option in Options->Security. This is a database option
+i.e. you can have different setting for different databases.
+</td>
+</tr>
 </tbody>
 </table>
 <h4><a name="V3.25.1Changes"></a>Changes to Existing Features in V3.25.1</h4>
